...
    <string name="action_settings">Settings</string>

    <string name="Premier_League_Team">Premier League Teams </string>

    <string name="header_txt">Premier League 2018/2019</string>

    <string name="return_button_txt">Return</string>

    <string name="editBoxHint">Search Team</string>

    <!--Text For the dropDown Menu-->
    <string-array name="Teams">
        <item>Arsenal </item>
        <item>Bournemouth</item>
        <item>Brighton</item>
        <item>Burnley</item>
        <item>Cardiff City</item>
        <item>Chelsea</item>
        <item>Crystal Palace</item>
        <item>Everton</item>
        <item>Fulham</item>
        <item>Huddersfield</item>
...
