...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_second">

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="378dp"
        android:layout_height="446dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="37dp"
...
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="148dp"
        android:layout_height="64dp"
        android:layout_marginStart="214dp"
        android:layout_marginLeft="214dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
...
