...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15sp"
            android:gravity="center_horizontal"
            android:text="@string/header_txt"
            android:textColor="@color/colorPrimary"
...
